# gst-plugin-ndi

./: Dockerfile  README.md  meson.build
src/: gst-ndi-sink.vala  gst-ndi-videosink.vala  gst-plugin-ndi.vala
vapi/: ndi.vapi
